# Phuongwb

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  README_VI.md  add_sample_data.py  analyze_page_structure.py  build.bat  check_db.py  check_db_content.py  core-api.yaml  crawler.yaml  debug_extraction.py  docker-compose.yml  frontend.yaml  health-check.sh  hello.py  ingress-nginx.yaml  ingress.yaml  postgres.yaml  pyproject.toml  qdrant.yaml  quick_test.py  rabbitmq.yaml  recommendation.yaml  redis.yaml  setup.sh  summary.yaml  test_ads_filter.py  test_article_content.py  test_before_after.py  test_crawl.py  test_crawl_debug.py  test_crawler_diagnosis.py  test_crawler_docker.py  test_crawler_fix.py  test_crawler_unit.py  test_extraction_simple.py  (+5 more)
core-api-service/: Makefile  README.md  classify_articles.py
core-api-service-backup/: Dockerfile
core-api-service-backup/src/: worker.py
core-api-service/src/: classifier.py  main.py  worker.py
crawler-service/: Dockerfile  Makefile
docs/: class_diagrams.md  system_design_analysis.md  usecase_diagram.puml  usecase_scenarios.md
e2e-tests/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TEMPLATE.http  VALIDATION.md  articles.http  auth.http  complete-workflow.http  crawler.http  health-check.http  recommendation.http  sources.http  summary.http
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
recommendation-service/: Dockerfile  Makefile  README.md  main.py
summary-service/: Dockerfile  Makefile  README.md  main.py
(+43 files in other folders)
